--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                         {
                             <li class="nav-item d-flex align-items-center me-3">
                                 <div class="user-avatar me-2 position-relative">
-                                    <img src="/images/avatars/John.jpg" class="rounded-circle" alt="User" width="32" height="32">
+                                    <img src="/images/avatars/@(Context.Session.GetString("Username")+".jpg")" class="rounded-circle" alt="User" width="32" height="32">
                                     <span class="status-dot online"></span>
                                 </div>
                                 <span class="nav-link p-0">Hello, @Context.Session.GetString("Username")</span>
